CSS: Fix attemp-ball alignment

--- a/public/css/lists.less
+++ b/public/css/lists.less
@@ -42,6 +42,11 @@
     align-items: center;
     flex-direction: column;
     margin-right: 1em;
+    padding: .5em 0;
+
+    .check-attempt {
+      margin-top: .5em;
+    }
   }
 
   .caption {
@@ -54,7 +59,7 @@
   header {
     display: flex;
     justify-content: space-between;
-    
+
     .state-text {
       color: @text-color;
     }
