--- a/public/css/module.less
+++ b/public/css/module.less
@@ -1,6 +1,12 @@
 @gray-dark: #777;
 @gray-light: #d8d8d8;
 
+.check-attempt {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .check-attempt .ball {
   background-color: @gray-light;
 
